fixed contrast error

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   --bg-color-bot: #474b62;
   --bg-color: #EDEDED;
   --text-color: white;
-  --contrast-color: #dde45b;
+  --contrast-color: #f5ff39;
   --card-label: #07267b;
   --card-text: #19191f;
   --card-color: #616479;
